# picoplayer

./: .directory  .gitignore  CMakeLists.txt  COPYING  picoplayer-zh_CN.ts  picoplayer.desktop  picoplayer.pro
qml/: picoplayer.qml
qml/cover/: CoverPage.qml
qml/dialogs/: UrlStreamPickerDialog.qml
qml/pages/: About.qml  Main.qml  VideoPlayer.qml
qml/resources/: resources.qrc
rpm/: picoplayer.spec
src/: filehelper.cpp  filehelper.h  picoplayer.cpp
src/player/: player.cpp  player.h  renderernemo.cpp  renderernemo.h
translations/: picoplayer-es.ts  picoplayer-fr.ts  picoplayer-it.ts  picoplayer-zh_CN.ts  picoplayer.ts
